# cibo_tilerlayer

./: .readthedocs.yaml  README.md  samconfig.toml  template.yaml  test-deploy.py
.github/workflows/: python-app.yml
doc/source/: api.rst  conf.py  index.rst
layers/cibo/: pyproject.toml  setup.py
layers/cibo/cibotiler/: __init__.py  tiling.py
layers/gdal/: Makefile  pyproject.toml  setup.py
layers/gdal/cibotiler/: resamplerhelper.py  tiling.py
layers/gdal/cibotiling/: cibotiling.py  tiling.py
layers/gdal/src/: resampler.cpp
tilertest/: __init__.py  app.py
