[build-system]
requires = ["setuptools>=61.0", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "cibotiler"
version = "0.1"
authors = [
    {name = "Sam Gillingham", email = "sgillingham@cibolabs.com"}
]


[tool.setuptools.packages.find]
namespaces = false      # Excludes subdirectories with no __init__.py

# sphinx restricted to <6 until pydata-sphinx-theme=0.13 is released.
# See https://github.com/pydata/pydata-sphinx-theme/issues/1094.
# docutils>=0.19 creates conflicts with sphinx-rtd-theme when building
# on readthedocs.
[project.optional-dependencies]
docs = ["docutils<0.19", "sphinx<6", "numpydoc", "pydata-sphinx-theme"]
